--- a/album.html
+++ b/album.html
@@ -176,7 +176,7 @@
           </div>
         </div>
         <!-- center -->
-        <div class="col-7 d-flex flex-column text-white">
+        <div class="col-6 d-flex flex-column text-white pt-2">
           <div class="iconsDivPlayer d-flex justify-content-center">
             <div
               class="iconShuffle px-2 d-flex justify-content-center align-items-center"
@@ -206,15 +206,15 @@
           </div>
           <!-- Progress Bar -->
           <div
-            class="progressBarDiv d-flex justify-content-center align-items-center"
+            class="progressBarDiv d-flex justify-content-center align-items-center mt-1"
           >
             <div class="timePlayed">0:12</div>
-            <div class="progress mx-2" style="height: 1px">
+            <div class="progress mx-2" style="height: 2px">
               <div
-                class="progress-bar"
+                class="progress-bar bg-white"
                 role="progressbar"
-                style="min-width: 30vw"
-                aria-valuenow="10"
+                style="width: 30vw"
+                aria-valuenow="25"
                 aria-valuemin="0"
                 aria-valuemax="100"
               ></div>
@@ -223,7 +223,21 @@
           </div>
         </div>
         <!-- Right side -->
-        <div class="col-3 d-flex"></div>
+        <div class="col-3 d-flex justify-content-end align-items-center">
+          <div class="listIcon px-2"><i class="bi bi-list"></i></div>
+          <div class="computerIcon px-2"><i class="bi bi-pc-display"></i></div>
+          <div class="volumeIcon px-2"><i class="bi bi-volume-up"></i></div>
+          <div class="progress" style="height: 2px">
+            <div
+              class="progress-bar bg-white"
+              role="progressbar"
+              style="width: 10vw"
+              aria-valuenow="25"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+        </div>
       </div>
     </div>
     <script src="album.js"></script>
