--- a/welcome.html
+++ b/welcome.html
@@ -253,8 +253,9 @@
             </div>
           </div>
           <h1 class="mt-5 ml-2 mb-3">Good morning</h1>
-          <div class="row">
-            <div class="col-2"><div class="card mb-3" style="max-width: 540px;">
+          <div class="container-fluid d-flex">
+          <div class="row d-flex">
+            <div class="col-2"><div class="card mb-2" style="max-width: 540px;">
               <div class="row no-gutters">
                 <div class="col-md-4">
                   <img src="..." alt="...">
@@ -325,6 +326,8 @@
               </div>
             </div></div>
             </div>
+          </div>
+            <div class="container-fluid d-flex">
             <div class="row">
               <div class="col-2"><div class="card mb-3" style="max-width: 540px;">
                 <div class="row no-gutters">
@@ -397,12 +400,14 @@
                 </div>
               </div></div>
             </div>
+          </div>
             <div class="row">
               <div class="col">
             <h2 class="mt-3 mb-4 ml-3">Recently played</h2>
           </div>
           <div class="col"><p class="d-flex justify-content-end mr-4" style="color:grey">SEE ALL</p></div>
           </div>
+          <div class="container-fluid">
             <div class="row">
               <div class="col"><div class="card" style="width: 18rem;">
                 <img src="..." class="card-img-top" alt="...">
@@ -448,6 +453,7 @@
               </div></div>
               
             </div>
+          </div>
             <div class="row">
               <div class="col">
             <h2 class="mt-4  ml-3">Shows to try</h2>
