Updates on Music Player Bar

--- a/album.html
+++ b/album.html
@@ -176,7 +176,9 @@
           </div>
         </div>
         <!-- center -->
-        <div class="col-6 d-flex flex-column text-white pt-2">
+        <div
+          class="col-6 d-flex flex-column text-white pt-2 justify-content-center"
+        >
           <div class="iconsDivPlayer d-flex justify-content-center">
             <div
               class="iconShuffle px-2 d-flex justify-content-center align-items-center"
