fixed the margins - page responsive - missing navbar & player

--- a/artist-page.html
+++ b/artist-page.html
@@ -15,7 +15,6 @@
   </head>
   <body>
     <div class="container" id="main-container">
-    <div class="jumbotron mb-0 jumbotron-fluid">
       <div
         class="container flex-column align-items-start justify-content-end pl-0">
         <div class="d-flex">
@@ -23,9 +22,8 @@
           <p class="lead">Verified artist</p>
         </div>
         <h1>Queen</h1>
-        <p class="mt-5 col-12 justify-self-end">37,120,133 monthly listeners</p>
+        <p class="mt-5 mb-0 col-12 justify-self-end">37,120,133 monthly listeners</p>
       </div>
-    </div>
 </div>
 <div class="container" id="playlist-container">
     <i class="bi bi-pause-circle-fill col-2" id="pause-button"></i>
@@ -39,42 +37,44 @@
         </div>
         <div class="col-12 d-flex" id="playlist-column">
           <ul class="list-group col-10" id="playlist-list">
-            <li class="list-group-item d-flex">
-              <p>1</p>
-              <img class="px-2" src="" alt="">
-              <p>Another One Bites The Dust - Remastered 2011</p>
-              <p class="px-2">1,013,238,772</p>
-              <p>3:34</p>
+            <li class="list-group-item d-flex pb-0">
+              <p class="col-md-1">1</p>
+              <img class="col-md-2" src="" alt="">
+              <p class="col-md-3">Another One Bites The Dust - Remastered 2011</p>
+              <p class="col-md-3">1,013,238,772</p>
+              <p class="col-md-3">3:34</p>
             </li>
-            <li class="list-group-item d-flex">
-              <p>2</p>
-              <img class="px-2" src="" alt="">
-              <p>Bohemian Rhapsody - Remastered 2011</p>
-              <p class="px-2">1,497,986,258</p>
-              <p>5:54</p>
+            <li class="list-group-item d-flex pb-0">
+              <p class="col-md-1">2</p>
+              <img class="col-md-2" src="" alt="">
+              <p class="col-md-3">Bohemian Rhapsody - Remastered 2011</p>
+              <p class="col-md-3">1,497,986,258</p>
+              <p class="col-md-3">5:54</p>
             </li>
-            <li class="list-group-item d-flex">
-              <p>3</p>
-              <img class="px-2" src="" alt="">
-              <p>Don't Stop Me Now - Remastered 2011</p>
-              <p class="px-2">1,063,959,983</p>
-              <p>3:29</p>
+            <li class="list-group-item d-flex pb-0">
+              <p class="col-md-1">3</p>
+              <img class="col-md-2" src="" alt="">
+              <p class="col-md-3">Don't Stop Me Now - Remastered 2011</p>
+              <p class="col-md-3">1,063,959,983</p>
+              <p class="col-md-3">3:29</p>
             </li>
-            <li class="list-group-item d-flex">
-              <p>4</p>
-              <img class="px-2" src="" alt="">
-              <p>Under Pressure - Remastered 2011</p>
-              <p class="px-2">900,225,026</p>
-              <p>4:08</p>
+            <li class="list-group-item d-flex pb-0">
+              <p class="col-md-1">4</p>
+              <img class="col-md-2" src="" alt="">
+              <p class="col-md-3">Under Pressure - Remastered 2011</p>
+              <p class="col-md-3">900,225,026</p>
+              <p class="col-md-3">4:08</p>
             </li>
-            <li class="list-group-item d-flex">
-              <p>5</p>
-              <img class="px-2" rc="" alt="">
-              <p>We Will Rock You - Remastered</p>
-              <p class="px-2">705,225,721</p>
-              <p>2:02</p>
+            <li class="list-group-item d-flex pb-0">
+              <p class="col-md-1">5</p>
+              <img class="col-md-2" src="" alt="">
+              <p class="col-md-3">We Will Rock You - Remastered</p>
+              <p class="col-md-3">705,225,721</p>
+              <p class="col-md-3">2:02</p>
             </li>
+            <li id="see-more"><p class="col-12">See more</p></li>
           </ul>
+
         </div>
       </div>
     </div>
