--- a/welcome.html
+++ b/welcome.html
@@ -11,6 +11,7 @@
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <style>
       body {
         font-size: x-large;
@@ -511,7 +512,7 @@
       </div>
     </div>
    
-    <i class="bi-alarm"></i>
+    
     <script
         src="https://kit.fontawesome.com/23cecef777.js"
         crossorigin="anonymous"
