--- a/welcome.html
+++ b/welcome.html
@@ -511,7 +511,96 @@
         </div>
       </div>
     </div>
-   
+    <!-- Music Player Bar -->
+    <div class="container-fluid footer fixed-bottom musicPlayer">
+      <div class="row mt-3">
+        <!-- Left side -->
+        <div class="col-3 d-flex">
+          <div class="playerSongImageDiv">
+            <img
+              src="https://cms-assets.tutsplus.com/cdn-cgi/image/width=850/uploads/users/114/posts/34296/final_image/Final-image.jpg"
+              alt="Song Cover"
+              class="playerSongImage"
+            />
+          </div>
+          <div class="playerSongInfo d-flex flex-column justify-content-center">
+            <div class="playerSongTitle px-2">
+              Another One Bites The Dust - Remastered 2011
+            </div>
+            <div class="playerSongArtist px-2">Queen</div>
+          </div>
+          <div class="playerSongIcons d-flex align-items-center">
+            <div class="playerHeart px-3"><i class="bi bi-heart"></i></div>
+            <div class="playerLaptop"><i class="bi bi-laptop"></i></div>
+          </div>
+        </div>
+        <!-- center -->
+        <div
+          class="col-6 d-flex flex-column text-white pt-2 justify-content-center"
+        >
+          <div class="iconsDivPlayer d-flex justify-content-center">
+            <div
+              class="iconShuffle px-2 d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-shuffle"></i>
+            </div>
+            <div
+              class="iconPrevious px-2 d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-skip-start-fill"></i>
+            </div>
+            <div
+              class="iconPlay mx-2 rounded-circle d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-play-fill"></i>
+            </div>
+            <div
+              class="iconNext px-2 d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-skip-end-fill"></i>
+            </div>
+            <div
+              class="iconRepeat px-2 d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-repeat"></i>
+            </div>
+          </div>
+          <!-- Progress Bar -->
+          <div
+            class="progressBarDiv d-flex justify-content-center align-items-center mt-1"
+          >
+            <div class="timePlayed">0:12</div>
+            <div class="progress mx-2" style="height: 2px">
+              <div
+                class="progress-bar bg-white"
+                role="progressbar"
+                style="width: 30vw"
+                aria-valuenow="25"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              ></div>
+            </div>
+            <div class="timeLeft">3:34</div>
+          </div>
+        </div>
+        <!-- Right side -->
+        <div class="col-3 d-flex justify-content-end align-items-center">
+          <div class="listIcon px-2"><i class="bi bi-list"></i></div>
+          <div class="computerIcon px-2"><i class="bi bi-pc-display"></i></div>
+          <div class="volumeIcon px-2"><i class="bi bi-volume-up"></i></div>
+          <div class="progress" style="height: 2px">
+            <div
+              class="progress-bar bg-white"
+              role="progressbar"
+              style="width: 10vw"
+              aria-valuenow="25"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+        </div>
+      </div>
+    </div>
     
     <script
         src="https://kit.fontawesome.com/23cecef777.js"
