--- a/welcome.html
+++ b/welcome.html
@@ -109,6 +109,35 @@
   color: black;
   font-size: 1.2vh;
 }
+.accountInfo {
+  width: 10vw;
+  background-color: black;
+}
+
+.profilePhotoDiv {
+  width: 2vw;
+  aspect-ratio: 1/1;
+  overflow: hidden;
+}
+
+.profileImg,
+.artistImg {
+  width: auto;
+  height: 100%;
+  object-fit: cover;
+}
+
+.profileName {
+  font-size: 0.8vh;
+  font-weight: bolder;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.profileArrowDown {
+  font-size: 0.8vh;
+}
 
     </style>
   </head>
