--- a/welcome.html
+++ b/welcome.html
@@ -170,9 +170,8 @@
                   >
                     <path
                       d="M8.354 1.146a.5.5 0 0 0-.708 0l-6 6A.5.5 0 0 0 1.5 7.5v7a.5.5 0 0 0 .5.5h4.5a.5.5 0 0 0 .5-.5v-4h2v4a.5.5 0 0 0 .5.5H14a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.146-.354L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.354 1.146ZM2.5 14V7.707l5.5-5.5 5.5 5.5V14H10v-4a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5v4H2.5Z"
-                    /></svg></span
-                ><span> <span></span><span>Home</span></a
-              >
+                    /></svg></span><span>Home</span>
+                </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#"
@@ -188,7 +187,7 @@
                     <path
                       d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
                     /></svg></span
-                ><span> <span></span><span>Search</span></a
+                ><span>Search</span></a
               >
             </li>
             <li class="nav-item">
@@ -208,7 +207,7 @@
                     <path
                       d="M4.268 1H12a1 1 0 0 1 1 1v11.768l.223.148A.5.5 0 0 0 14 13.5V2a2 2 0 0 0-2-2H6a2 2 0 0 0-1.732 1z"
                     /></svg></span
-                ><span> <span></span><span>Your Library</span></a
+                ><span>Your Library</span></a
               >
             </li>
           </ul>
@@ -231,7 +230,7 @@
                     <path
                       d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"
                     /></svg></span
-                ><span> <span>Create Playlist</span></a
+                ><span>Create Playlist</span></a
               >
             </li>
             <li class="nav-item">
@@ -587,12 +586,10 @@
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div></div>
-            
-          </div>
-          </div>
-        </div>
+            </div>
+            </div>
       </div>
-    </div>
+        
     <!-- Music Player Bar -->
     <div class="container-fluid footer fixed-bottom musicPlayer">
       <div class="row mt-3">
