Updates on Table & styling

--- a/album.html
+++ b/album.html
@@ -166,7 +166,9 @@
             <!-- Account Info -->
             <div class="d-flex">
               <div class="accountInfo d-flex rounded-pill p-1 mt-2 mr-2">
-                <div class="profilePhotoDiv rounded-circle mr-1">
+                <div
+                  class="profilePhotoDiv d-flex align-item-center justify-content-center rounded-circle mr-1"
+                >
                   <img
                     src="https://image.shutterstock.com/mosaic_250/2780032/1770074666/stock-photo-head-shot-of-african-self-assured-executive-manager-portrait-successful-staff-member-company-1770074666.jpg"
                     alt="Profile Foto"
@@ -177,7 +179,7 @@
                   Alexander Spomer
                 </div>
                 <div
-                  class="profileArrowDown text-white align-self-center pl-1 pr-1"
+                  class="profileArrowDown text-white align-self-center pl-1 pr-1 ml-auto mr-xl-1"
                 >
                   <i class="bi bi-caret-down-fill"></i>
                 </div>
@@ -200,7 +202,9 @@
                   Bohemian Rhapsody (The Original Soundtrack)
                 </h2>
                 <div class="d-flex">
-                  <div class="artistImageDiv rounded-circle">
+                  <div
+                    class="artistImageDiv rounded-circle d-flex align-item-center justify-content-center"
+                  >
                     <img
                       src="https://image.shutterstock.com/mosaic_250/2780032/1770074666/stock-photo-head-shot-of-african-self-assured-executive-manager-portrait-successful-staff-member-company-1770074666.jpg"
                       alt="Profile Foto"
@@ -249,17 +253,26 @@
               <tbody>
                 <tr>
                   <th class="thMinWidth" scope="row">1</th>
-                  <td>Mark</td>
+                  <td class="d-flex flex-column">
+                    <div class="tableTitle">20th Century Fox Fanture</div>
+                    <div class="tableArtist">Queen</div>
+                  </td>
                   <td class="text-right pr-5">0:25</td>
                 </tr>
                 <tr>
                   <th class="thMinWidth" scope="row">2</th>
-                  <td>Jacob</td>
+                  <td class="d-flex flex-column">
+                    <div class="tableTitle">Somebody To Love</div>
+                    <div class="tableArtist">Queen</div>
+                  </td>
                   <td class="text-right pr-5">4:55</td>
                 </tr>
                 <tr>
                   <th class="thMinWidth" scope="row">3</th>
-                  <td>Larry the Bird</td>
+                  <td class="d-flex flex-column">
+                    <div class="tableTitle">Doing All Right - Revisited</div>
+                    <div class="tableArtist">Queen</div>
+                  </td>
                   <td class="text-right pr-5">3:16</td>
                 </tr>
               </tbody>
