--- a/welcome.html
+++ b/welcome.html
@@ -182,8 +182,8 @@
           <div class="row">
             <div class="col d-flex justify-content-start">
               <div class="prev-next-buttons">
-                <button type="button" class="fa fas fa-chevron-left"></button>
-                <button type="button" class="fa fas fa-chevron-right"></button>
+                <button type="button" ><i class="bi bi-chevron-left"></i></button>
+                <button type="button" ><i class="bi bi-chevron-right"></i></button>
               </div>
           </div>
           <!--Account-->
