--- a/artist-page.html
+++ b/artist-page.html
@@ -155,10 +155,10 @@
 <div class="container col-10 mr-0" id="playlist-container">
   <div class="row d-flex justify-content-start">
   <div class="pauseButton mr-3 rounded-circle text-white d-flex justify-content-center align-items-center">
-    <i class="bi bi-pause-circle-fill col-2" id="pause-button"></i>
+    <i class="bi bi-pause-circle-fill col-2 mr-4" id="pause-button"></i>
               </div>
 
-    <p class="d-inline border" style="margin-block: auto" id="follow">Follow</p>
+    <p class="d-inline border mr-4" style="margin-block: auto" id="follow">Follow</p>
     <p class="d-inline" style="margin-block: auto" id="dots">...</p>
   </div>
     <div class="container mt-5" id="playlist">
@@ -168,38 +168,38 @@
           <h2 class="col-2 mx-0 px-0">Artist Pick</h2>
         </div>
         <div class="col-12 d-flex" id="playlist-column">
-          <ul class="list-group col-10" id="playlist-list">
+          <ul class="list-group col-10 pb-0" id="playlist-list">
             <li class="list-group-item d-flex pb-0">
               <p class="col-md-1">1</p>
-              <img class="col-md-2" src="" alt="">
+              <img class="col-md-2 album-list-cover" src="https://i.discogs.com/3OjPkxC6K_qODDbRaenWidkkD6mOyZ5ujgdWluJQNYc/rs:fit/g:sm/q:40/h:300/w:300/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTg0MTA3/MDgtMTUxODAzMzI2/OS03NzY0LmpwZWc.jpeg" alt="">
               <p class="col-md-3">Another One Bites The Dust - Remastered 2011</p>
               <p class="col-md-3">1,013,238,772</p>
               <p class="col-md-3">3:34</p>
             </li>
             <li class="list-group-item d-flex pb-0">
               <p class="col-md-1">2</p>
-              <img class="col-md-2" src="" alt="">
+              <img class="col-md-2 album-list-cover" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU" alt="">
               <p class="col-md-3">Bohemian Rhapsody - Remastered 2011</p>
               <p class="col-md-3">1,497,986,258</p>
               <p class="col-md-3">5:54</p>
             </li>
             <li class="list-group-item d-flex pb-0">
               <p class="col-md-1">3</p>
-              <img class="col-md-2" src="" alt="">
+              <img class="col-md-2 album-list-cover" src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png" alt="">
               <p class="col-md-3">Don't Stop Me Now - Remastered 2011</p>
               <p class="col-md-3">1,063,959,983</p>
               <p class="col-md-3">3:29</p>
             </li>
             <li class="list-group-item d-flex pb-0">
               <p class="col-md-1">4</p>
-              <img class="col-md-2" src="" alt="">
+              <img class="col-md-2 album-list-cover" src="https://i.discogs.com/j98CWRsvHhEvNVKSo5UDn08KkRIxE9LP3YqMe5icZj8/rs:fit/g:sm/q:40/h:300/w:300/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTQxNDM0/NDUtMTU3MjE4NTkx/Ni0yMjAzLmpwZWc.jpeg" alt="">
               <p class="col-md-3">Under Pressure - Remastered 2011</p>
               <p class="col-md-3">900,225,026</p>
               <p class="col-md-3">4:08</p>
             </li>
             <li class="list-group-item d-flex pb-0">
               <p class="col-md-1">5</p>
-              <img class="col-md-2" src="" alt="">
+              <img class="col-md-2 album-list-cover" src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d6/Queen_rockyou_dvd.jpg/220px-Queen_rockyou_dvd.jpg" alt="">
               <p class="col-md-3">We Will Rock You - Remastered</p>
               <p class="col-md-3">705,225,721</p>
               <p class="col-md-3">2:02</p>
@@ -213,6 +213,96 @@
 </div>
 </div>
 </div>
+    <!-- Music Player Bar -->
+    <div class="container-fluid footer fixed-bottom musicPlayer">
+      <div class="row mt-3">
+        <!-- Left side -->
+        <div class="col-3 d-flex">
+          <div class="playerSongImageDiv">
+            <img
+              src="https://cms-assets.tutsplus.com/cdn-cgi/image/width=850/uploads/users/114/posts/34296/final_image/Final-image.jpg"
+              alt="Song Cover"
+              class="playerSongImage"
+            />
+          </div>
+          <div class="playerSongInfo d-flex flex-column justify-content-center">
+            <div class="playerSongTitle px-2">
+              Another One Bites The Dust - Remastered 2011
+            </div>
+            <div class="playerSongArtist px-2">Queen</div>
+          </div>
+          <div class="playerSongIcons d-flex align-items-center">
+            <div class="playerHeart px-3"><i class="bi bi-heart"></i></div>
+            <div class="playerLaptop"><i class="bi bi-laptop"></i></div>
+          </div>
+        </div>
+        <!-- center -->
+        <div
+          class="col-6 d-flex flex-column text-white pt-2 justify-content-center"
+        >
+          <div class="iconsDivPlayer d-flex justify-content-center">
+            <div
+              class="iconShuffle px-2 d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-shuffle"></i>
+            </div>
+            <div
+              class="iconPrevious px-2 d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-skip-start-fill"></i>
+            </div>
+            <div
+              class="iconPlay mx-2 rounded-circle d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-play-fill"></i>
+            </div>
+            <div
+              class="iconNext px-2 d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-skip-end-fill"></i>
+            </div>
+            <div
+              class="iconRepeat px-2 d-flex justify-content-center align-items-center"
+            >
+              <i class="bi bi-repeat"></i>
+            </div>
+          </div>
+          <!-- Progress Bar -->
+          <div
+            class="progressBarDiv d-flex justify-content-center align-items-center mt-1"
+          >
+            <div class="timePlayed">0:12</div>
+            <div class="progress mx-2" style="height: 2px">
+              <div
+                class="progress-bar bg-white"
+                role="progressbar"
+                style="width: 30vw"
+                aria-valuenow="25"
+                aria-valuemin="0"
+                aria-valuemax="100"
+              ></div>
+            </div>
+            <div class="timeLeft">3:34</div>
+          </div>
+        </div>
+        <!-- Right side -->
+        <div class="col-3 d-flex justify-content-end align-items-center">
+          <div class="listIcon px-2"><i class="bi bi-list"></i></div>
+          <div class="computerIcon px-2"><i class="bi bi-pc-display"></i></div>
+          <div class="volumeIcon px-2"><i class="bi bi-volume-up"></i></div>
+          <div class="progress" style="height: 2px">
+            <div
+              class="progress-bar bg-white"
+              role="progressbar"
+              style="width: 10vw"
+              aria-valuenow="25"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            ></div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
