--- a/artist-page.html
+++ b/artist-page.html
@@ -141,78 +141,124 @@
             </li>
           </ul>
         </div>
-    <div class="container col-10" id="main-container">
-      <div
-        class="container flex-column align-items-start justify-content-end pl-0">
-        <div class="d-flex">
-          <i class="bi bi-patch-check-fill" id="verified-btn"></i>
-          <p class="lead">Verified artist</p>
+        <div class="container col-10" id="main-container">
+          <div
+            class="container flex-column align-items-start justify-content-end pl-0"
+          >
+            <div class="d-flex">
+              <i class="bi bi-patch-check-fill" id="verified-btn"></i>
+              <p class="lead">Verified artist</p>
+            </div>
+            <h1>Queen</h1>
+            <p class="mt-5 mb-0 col-12 justify-self-end">
+              37,120,133 monthly listeners
+            </p>
+          </div>
         </div>
-        <h1>Queen</h1>
-        <p class="mt-5 mb-0 col-12 justify-self-end">37,120,133 monthly listeners</p>
-      </div>
-</div>
-<div class="container col-10 mr-0" id="playlist-container">
-  <div class="row d-flex justify-content-start">
-  <div class="pauseButton mr-3 rounded-circle text-white d-flex justify-content-center align-items-center">
-    <i class="bi bi-pause-circle-fill col-2 mr-4" id="pause-button"></i>
+        <div class="container col-10 mr-0" id="playlist-container">
+          <div class="row d-flex justify-content-start">
+            <div
+              class="pauseButton mr-3 rounded-circle text-white d-flex justify-content-center align-items-center"
+            >
+              <i
+                class="bi bi-pause-circle-fill col-2 mr-4"
+                id="pause-button"
+              ></i>
+            </div>
+
+            <p
+              class="d-inline border mr-4"
+              style="margin-block: auto"
+              id="follow"
+            >
+              Follow
+            </p>
+            <p class="d-inline" style="margin-block: auto" id="dots">...</p>
+          </div>
+          <div class="container mt-5" id="playlist">
+            <div class="row" id="playlist-row">
+              <div class="col-12 d-flex mb-2">
+                <h2 class="col-10 mx-0 px-0">Popular</h2>
+                <h2 class="col-2 mx-0 px-0">Artist Pick</h2>
               </div>
-
-    <p class="d-inline border mr-4" style="margin-block: auto" id="follow">Follow</p>
-    <p class="d-inline" style="margin-block: auto" id="dots">...</p>
-  </div>
-    <div class="container mt-5" id="playlist">
-      <div class="row" id="playlist-row">
-        <div class="col-12 d-flex mb-2">
-          <h2 class="col-10 mx-0 px-0">Popular</h2>
-          <h2 class="col-2 mx-0 px-0">Artist Pick</h2>
-        </div>
-        <div class="col-12 d-flex" id="playlist-column">
-          <ul class="list-group col-10 pb-0" id="playlist-list">
-            <li class="list-group-item d-flex pb-0">
-              <p class="col-md-1">1</p>
-              <img class="col-md-2 album-list-cover" src="https://i.discogs.com/3OjPkxC6K_qODDbRaenWidkkD6mOyZ5ujgdWluJQNYc/rs:fit/g:sm/q:40/h:300/w:300/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTg0MTA3/MDgtMTUxODAzMzI2/OS03NzY0LmpwZWc.jpeg" alt="">
-              <p class="col-md-3">Another One Bites The Dust - Remastered 2011</p>
-              <p class="col-md-3">1,013,238,772</p>
-              <p class="col-md-3">3:34</p>
-            </li>
-            <li class="list-group-item d-flex pb-0">
-              <p class="col-md-1">2</p>
-              <img class="col-md-2 album-list-cover" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU" alt="">
-              <p class="col-md-3">Bohemian Rhapsody - Remastered 2011</p>
-              <p class="col-md-3">1,497,986,258</p>
-              <p class="col-md-3">5:54</p>
-            </li>
-            <li class="list-group-item d-flex pb-0">
-              <p class="col-md-1">3</p>
-              <img class="col-md-2 album-list-cover" src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png" alt="">
-              <p class="col-md-3">Don't Stop Me Now - Remastered 2011</p>
-              <p class="col-md-3">1,063,959,983</p>
-              <p class="col-md-3">3:29</p>
-            </li>
-            <li class="list-group-item d-flex pb-0">
-              <p class="col-md-1">4</p>
-              <img class="col-md-2 album-list-cover" src="https://i.discogs.com/j98CWRsvHhEvNVKSo5UDn08KkRIxE9LP3YqMe5icZj8/rs:fit/g:sm/q:40/h:300/w:300/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTQxNDM0/NDUtMTU3MjE4NTkx/Ni0yMjAzLmpwZWc.jpeg" alt="">
-              <p class="col-md-3">Under Pressure - Remastered 2011</p>
-              <p class="col-md-3">900,225,026</p>
-              <p class="col-md-3">4:08</p>
-            </li>
-            <li class="list-group-item d-flex pb-0">
-              <p class="col-md-1">5</p>
-              <img class="col-md-2 album-list-cover" src="https://upload.wikimedia.org/wikipedia/en/thumb/d/d6/Queen_rockyou_dvd.jpg/220px-Queen_rockyou_dvd.jpg" alt="">
-              <p class="col-md-3">We Will Rock You - Remastered</p>
-              <p class="col-md-3">705,225,721</p>
-              <p class="col-md-3">2:02</p>
-            </li>
-            <li id="see-more"><p class="col-12">See more</p></li>
-          </ul>
-
+              <div class="col-12 d-flex" id="playlist-column">
+                <ul class="list-group col-10 pb-0" id="playlist-list">
+                  <li class="list-group-item d-flex pb-0">
+                    <p class="col-md-1">1</p>
+                    <img
+                      class="col-md-2 album-list-cover"
+                      src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
+                      alt=""
+                    />
+                    <p class="col-md-3">
+                      Another One Bites The Dust - Remastered 2011
+                    </p>
+                    <p class="col-md-3">1,013,238,772</p>
+                    <p class="col-md-3">3:34</p>
+                  </li>
+                  <li class="list-group-item d-flex pb-0">
+                    <p class="col-md-1">2</p>
+                    <img
+                      class="col-md-2 album-list-cover"
+                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
+                      alt=""
+                    />
+                    <p class="col-md-3">Bohemian Rhapsody - Remastered 2011</p>
+                    <p class="col-md-3">1,497,986,258</p>
+                    <p class="col-md-3">5:54</p>
+                  </li>
+                  <li class="list-group-item d-flex pb-0">
+                    <p class="col-md-1">3</p>
+                    <img
+                      class="col-md-2 album-list-cover"
+                      src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
+                      alt=""
+                    />
+                    <p class="col-md-3">Don't Stop Me Now - Remastered 2011</p>
+                    <p class="col-md-3">1,063,959,983</p>
+                    <p class="col-md-3">3:29</p>
+                  </li>
+                  <li class="list-group-item d-flex pb-0">
+                    <p class="col-md-1">4</p>
+                    <img
+                      class="col-md-2 album-list-cover"
+                      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
+                      alt=""
+                    />
+                    <p class="col-md-3">Under Pressure - Remastered 2011</p>
+                    <p class="col-md-3">900,225,026</p>
+                    <p class="col-md-3">4:08</p>
+                  </li>
+                  <li class="list-group-item d-flex pb-0">
+                    <p class="col-md-1">5</p>
+                    <img
+                      class="col-md-2 album-list-cover"
+                      src="https://upload.wikimedia.org/wikipedia/it/2/20/Don%27t_Stop_Me_Now.png"
+                      alt=""
+                    />
+                    <p class="col-md-3">We Will Rock You - Remastered</p>
+                    <p class="col-md-3">705,225,721</p>
+                    <p class="col-md-3">2:02</p>
+                  </li>
+                  <li id="see-more"><p class="col-12">See more</p></li>
+                </ul>
+                <ul class="list-group col-2 pb-0" id="playlist-current-track">
+                  <li class="list-group-item">
+                    <img
+                    class="current-track"
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRii7NHtWvGaRqiNJikrMerrs1ler0NDHOQw&usqp=CAU"
+                    alt="Queen"
+                  />
+                  <p>Queen best of</p>
+                  <figcaption>Playlist</figcaption>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-</div>
-</div>
-</div>
     <!-- Music Player Bar -->
     <div class="container-fluid footer fixed-bottom musicPlayer">
       <div class="row mt-3">
