--- a/album.html
+++ b/album.html
@@ -189,18 +189,12 @@
           <!-- Album Cover + Info -->
           <div class="row d-flex my-3">
             <div class="col-2 mt-2 d-flex align-items-end">
-              <img
-                src="https://cms-assets.tutsplus.com/cdn-cgi/image/width=850/uploads/users/114/posts/34296/final_image/Final-image.jpg"
-                alt="Album Cover"
-                class="albumCover"
-              />
+              <img alt="Album Cover" class="albumCover" />
             </div>
             <div class="col-10 d-flex align-items-end mt-2 text-white">
               <div class="d-flex flex-column">
-                <div class="musicype text-uppercase">Album</div>
-                <h2 class="albumTitle">
-                  Bohemian Rhapsody (The Original Soundtrack)
-                </h2>
+                <div class="recordType text-uppercase">Album</div>
+                <h2 class="albumTitle">Bohemian</h2>
                 <div class="d-flex">
                   <div
                     class="artistImageDiv rounded-circle d-flex align-item-center justify-content-center"
@@ -212,11 +206,11 @@
                     />
                   </div>
                   <div class="albumInfo d-flex align-items-center ml-1">
-                    <div class="artist">Queen</div>
+                    <div class="artist">Artist</div>
                     <div class="separaterDot"><i class="bi bi-dot"></i></div>
-                    <div class="releaseYear">2018</div>
+                    <div class="releaseYear">2022</div>
                     <div class="separaterDot"><i class="bi bi-dot"></i></div>
-                    <div class="quantityDuration">22 songs, 1 hr 19 min</div>
+                    <div class="quantityDuration">4 songs, 3 hr 14 min</div>
                   </div>
                 </div>
               </div>
@@ -250,7 +244,7 @@
                   </th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody id="trackTable">
                 <tr>
                   <th class="thMinWidth" scope="row">1</th>
                   <td class="d-flex flex-column">
@@ -304,7 +298,7 @@
             <div class="playerLaptop"><i class="bi bi-laptop"></i></div>
           </div>
         </div>
-        <!-- center -->
+        <!-- Center -->
         <div
           class="col-6 d-flex flex-column text-white pt-2 justify-content-center"
         >
